--- a/doc/DokumenSkripsi/data.tex
+++ b/doc/DokumenSkripsi/data.tex
@@ -214,8 +214,8 @@
 % - gunakan \texorpdfstring{\\}{} untuk pindah ke baris baru
 % - judul TIDAK ditulis dengan menggunakan huruf besar seluruhnya !!
 %=============================================================================
-\judulINA{Analisa Kekurangan dan Implementasi Perbaikan Perangkat Lunak BlueTape}
-\judulENG{Analysis on BlueTape Software Drawbacks and Fix the Implementation}
+\judulINA{Analisa dan Implementasi Perbaikan Perangkat Lunak BlueTape}
+\judulENG{Improvement Analysis and Implementation of Bluetape Software}
 %_____________________________________________________________________________
 %=============================================================================
 % 								BAGIAN X
