--- a/doc/DokumenSkripsi/skripsi.tex
+++ b/doc/DokumenSkripsi/skripsi.tex
@@ -71,6 +71,7 @@
 \usepackage{indentfirst}
 \usepackage{footmisc}
 \usepackage{courier}
+\usepackage{listings}
  
 \newcommand{\vtemplateauthor}{lionov}
 \newcommand{\dtext}[1]{{\color{lightgray} \lipsum[#1]}}%command untuk dummy text
