--- a/doc/DokumenSkripsi/Bab/bab2.tex
+++ b/doc/DokumenSkripsi/Bab/bab2.tex
@@ -9,15 +9,7 @@ Pada bab ini akan berisi landasan-landasan teori yang dipakai pada penelitian in
 \label{sec:codeigniter}
 
 
-CodeIgniter\cite{codeigniter3} adalah \textit{framework} untuk pembuat website yang menggunakan \textit{PHP}. \textit{CodeIgniter} mempermudah \textit{developer} untuk meminimalisir penggunaan kode untuk mengakses suatu fungsi. Seperti untuk mengambil data pada \textit{database}, mengakses file \textit{php} lainnya. Penggunaan \textit{framework CodeIgniter} juga mudah.\textit{ Developer} tidak perlu melakukan banyak konfigurasi--konfigurasi saat melakukan \textit{setup}.\textit{CodeIgniter} juga memberikan dokumentasi yang lengkap. Permasalahan \textit{routing}  sudah diselesaikan oleh \textit{framework} ini. \textit{ Framework} ini secara otomatis akan mengarah ke file dalam \textit{directory controllers} sesuai dengan \textit{path-abempty} pada \textit{URI}  dan menjalankan \textit{method} \codefont{index()}. Kelebihan--kelebihan yang diberikan oleh \textit{CodeIgniter} sebagai berikut:
-
-\begin{itemize}
-	\item \textit{CodeIgniter} memiliki performa yang cepat
-	\item \textit{CodeIgniter} menggunakan struktur model-view-controller
-	\item \textit{URL} yang dihasilkan \textit{CodeIgniter} bersih dan \textit{search engine friendly}
-	\item \textit{CodeIgniter} memiliki banyak \textit{libraries} seperti untuk mengakses \textit{database}, mengirim email, validasi \textit{form} data, dll
-	\item \textit{CodeIgniter} memiliki dokumen yang lengkap
-\end{itemize}
+CodeIgniter\cite{codeigniter3} adalah \textit{framework} untuk pembuat website yang menggunakan \textit{PHP}. \textit{CodeIgniter} mempermudah \textit{developer} untuk meminimalisir penggunaan kode untuk mengakses suatu fungsi. Seperti untuk mengambil data pada \textit{database}, mengakses file \textit{php} lainnya. Penggunaan \textit{framework CodeIgniter} juga mudah.\textit{ Developer} tidak perlu melakukan banyak konfigurasi--konfigurasi saat melakukan \textit{setup}.\textit{CodeIgniter} juga memberikan dokumentasi yang lengkap. Permasalahan \textit{routing}  sudah diselesaikan oleh \textit{framework} ini. \textit{ Framework} ini secara otomatis akan mengarah ke file dalam \textit{directory controllers} sesuai dengan \textit{path-abempty} pada \textit{URI}  dan menjalankan \textit{method} \codefont{index()}.
 
 
 \begin{figure}[H]
@@ -28,7 +20,140 @@ CodeIgniter\cite{codeigniter3} adalah \textit{framework} untuk pembuat website y
 \end{figure}
 
 
-\textit{CodeIgniter} menerapkan arsitektur \textit{MVC} yang dapat dilihat pada gambar \ref{fig:appflowchart}, file \codefont{index.php} akan mengatur routing dan mengarahkan ke \textit{application controller} yang berada di \textit{directory controller} dan melalui \textit{controller} akan dipanggil \textit{models, libraries, helpers, etc} yang dibutuhkan dengan perintah \codefont{\$this->load-><<apa\_yang mau\_diload>>(\lq<<nama\_file>>\rq)}. Masukan akan diolah melalui \textit{models} dan hasil yang sudah siap akan dikirim ke \textit{view} melalui \textit{controller}. Fitur tambahan dari arsitektur \textit{CodeIgniter} adalah saat \textit{router} memeriksa \textit{HTTP request} jika \textit{cache} tersedia maka akan dikirimkan \textit{cache} tersebut dan jika tidak ada \textit{cache} maka \textit{security} akan memeriksa dan melakukan filter terhadap \textit{HTTP request} seperti pada gambar \ref{fig:appflowchart}. 
+\textit{CodeIgniter} menerapkan arsitektur \textit{MVC} yang dapat dilihat pada gambar \ref{fig:appflowchart}, file \codefont{index.php} berfungsi mengatur routing dan mengarahkan ke \textit{application controller} yang berada di \textit{directory controller} dan melalui \textit{controller} akan dipanggil \textit{models, libraries, helpers, etc} yang dibutuhkan dengan perintah \codefont{\$this->load-><<apa\_yang\_mau\_diload>>(\lq<<nama\_file>>\rq)}. Masukan akan diolah melalui \textit{models} dan hasil yang sudah siap akan dikirim ke \textit{view} melalui \textit{controller}. Fitur tambahan dari arsitektur \textit{CodeIgniter} adalah saat \textit{router} memeriksa \textit{HTTP request} jika \textit{cache} tersedia maka akan dikirimkan \textit{cache} tersebut dan jika tidak ada \textit{cache} maka \textit{security} akan memeriksa dan melakukan filter terhadap \textit{HTTP request} seperti pada gambar \ref{fig:appflowchart}. 
+
+\subsection{Controller}
+
+\textit{Controller} adalah pusat dari aplikasi, \textit{controller} menangani apa yang harus dilakukan dari \textit{HTTP request}. Dalam CodeIgniter untuk menginisiasi \textit{controller} cukup menulis nama kelas diikuti dengan \codefont{extends CI\_Controller} sebagai contoh:
+
+\begin{table}[H]
+\begin{tabular}{|p{\textwidth}|}
+\hline
+\begin{lstlisting}
+<?php
+defined('BASEPATH') OR exit('No direct script access allowed');
+		
+class Welcome extends CI_Controller {
+
+	public function index()
+	{
+		$this->load->view('welcome_message');
+	}
+}
+\end{lstlisting}\\
+\hline
+\end{tabular}
+\end{table}
+\smallskip
+
+fungsi diatas akan mengembalikan file \textit{welcome\_message.php} pada direktori \textit{view}. Developer dapat menaruh parameter pada \textit{view} tersebut.
+
+\smallskip
+\begin{table}[H]
+\begin{tabular}{|p{\linewidth}|}
+\hline
+\begin{lstlisting}
+<?php
+defined('BASEPATH') OR exit('No direct script access allowed');
+	
+class Welcome extends CI_Controller {
+	
+	public function __construct(){
+		parent::_construct();
+		$this->load->database();
+		$this->load->model(contoh_model);
+	}
+	
+	public function index()
+	{
+		$t = "hello";
+		$this->load->view('welcome_message',array(
+		't' => $t));
+	}
+}
+\end{lstlisting}\\
+\hline
+\end{tabular}
+\end{table}
+
+\smallskip
+Fungsi \textit{constructor} yang dijalankan pada \textit{codeigniter} juga harus memanggil \codefont{parent::construct()}. Dalam contoh diatas juga dapat dilakukan \textit{load model} dan \textit{database}. File \textit{model} akan berada di direktori \textit{model} sedangkan untuk \codefont{\$this->load->database()} akan melakukan \textit{load} pada \textit{database} menggunakan parameter yang ada di direktori \codefont{/config/database.php}. Begitu juga dengan kebutuhan--kebutuhan lainnya dapat dilakukan dengan \textit{method} \codefont{\$this->load}.
+
+
+\subsection{Model}
+
+\textit{Model} berfungsi sebagai \textit{logic} dari aplikasi. \textit{ Model} pada \textit{CodeIgniter} bersifat opsional, tetapi disediakan untuk \textit{developer} yang ingin menggunakan MVC\cite{codeigniter3}. 
+
+
+\begin{table}[H]
+\begin{tabular}{|p{\linewidth}|}
+	\hline
+	\begin{lstlisting}
+class Blog_model extends CI_Model {
+
+	public $title;
+	public $content;
+	public $date;
+	
+	public function get_last_ten_entries()
+	{
+		$query = $this->db->get('entries', 10);
+		return $query->result();
+	}
+	
+	public function insert_entry()
+	{
+		$this->title    = $_POST['title']; 
+		$this->content  = $_POST['content'];
+		$this->date     = time();
+	
+		$this->db->insert('entries', $this);
+	}
+	
+	public function update_entry()
+	{
+		$this->title    = $_POST['title'];
+		$this->content  = $_POST['content'];
+		$this->date     = time();
+	
+		$this->db->update('entries', $this, array('id' =>
+		$_POST['id']));
+	}
+	
+}
+\end{lstlisting}\\
+\hline
+\end{tabular}
+\end{table}
+\smallskip
+\textit{Model} pada \textit{CodeIgniter} diikuti dengan \codefont{extends CI\_MODEL}. Hal yang berurusan terhadap \textit{database} dapat dilakukan dengan perintah \codefont{\$this->db->query(\lq<<isi query>>\rq)} atau untuk mempermudah beberapa fungsi \textit{MYSQL} dasar \textit{CodeIgniter} menyediakan \textit{method} bisa langsung digunakan seperti \codefont{\$this->db->get(\lq<<nama tabel>>\rq)}
+untuk mengambil semua nilai dari tabel tersebut. Untuk dapat mengakses \textit{database} maka harus dipasang \textit{database} yang akan digunakan pada \codefont{config/database.php}.
+
+\begin{table}[H]
+	\begin{tabular}{|p{\linewidth}|}
+		\hline
+		\begin{lstlisting}
+		
+$config['hostname'] = 'localhost';
+$config['username'] = 'myusername';
+$config['password'] = 'mypassword';
+$config['database'] = 'mydatabase';
+$config['dbdriver'] = 'mysqli';
+$config['dbprefix'] = '';
+$config['pconnect'] = FALSE;
+$config['db_debug'] = TRUE;
+
+$this->load->model('model_name', '', $config);
+		\end{lstlisting}\\
+		\hline
+	\end{tabular}
+\end{table}
+\smallskip
+
+File diatas menyimpan kredensial dari \textit{database} yang digunakan. Mulai dari \textit{hostname, username, password, dst}.
+
+\subsection{View}
+
 
 
 
