--- a/doc/DokumenSkripsi/referensi.bib
+++ b/doc/DokumenSkripsi/referensi.bib
@@ -318,6 +318,13 @@
 	organization = {British Columbia Institute of Technology},
 	address = {3700 Willingdon Ave}
 }
+@manual{phpspreadsheet,
+	number = {Version 1.14.1},
+	title={PhpSpreadsheet},
+	year={2019},
+	organization={PHPOffice},
+	address={The Internet}
+}
 
 @manual{unicode:16:stdv9,
 	number 		= {Version 9.0.0},
