--- a/doc/DokumenSkripsi/skripsi.tex
+++ b/doc/DokumenSkripsi/skripsi.tex
@@ -72,6 +72,12 @@
 \usepackage{footmisc}
 \usepackage{courier}
 \usepackage{listings}
+\usepackage{ amssymb }
+\lstset{
+	numbers=none,
+	showspaces=false,
+	frame=single
+}
  
 \newcommand{\vtemplateauthor}{lionov}
 \newcommand{\dtext}[1]{{\color{lightgray} \lipsum[#1]}}%command untuk dummy text
